--- a/debs/wine/debian/changelog
+++ b/debs/wine/debian/changelog
@@ -1,830 +1,40 @@
-wine (4.0-2+puavo1+buildonce) buster; urgency=medium
+wine (2.0.2-1+puavo1+buildonce) buster; urgency=medium
 
   * Add puavo-support-ata-id.patch.
 
- -- Puavo Org <dev@opinsys.fi>  Tue, 16 Apr 2019 12:46:02 +0300
+ -- Puavo Org <dev@opinsys.fi>  Tue, 19 Sep 2017 10:26:48 +0300
 
-wine (4.0-2) unstable; urgency=medium
-
-  * Point to branch buster in the Vcs fields.
-  * Support building with unicode-data 12.
-    Build against new unicode-data supporting the new Japanese era
-    "令和 (Reiwa)" (closes: #928013).
-  * Fix incorrect uses of sizeof in temporary-directory.patch (closes: #928084).
-    Thanks to Konstantin Demin.
-
- -- Jens Reyer <jre.winesim@gmail.com>  Sat, 27 Apr 2019 20:20:01 +0200
-
-wine (4.0-1) unstable; urgency=medium
-
-  * New upstream release 4.0, released Jan 22, 2019.
-  * Make sure /run/user/$uid exists before choosing to use it as the location
-    for wine's temporary directory (closes: #918666).
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 26 Jan 2019 19:21:02 +0000
-
-wine (4.0~rc7-1) unstable; urgency=medium
-
-  * New upstream release 4.0-rc7, released Jan 18, 2019.
-  * Suggest exe-thumbnailer or kio-extras (LP: #1722991).
-    Thanks to James Lu.
-
- -- Jens Reyer <jre.winesim@gmail.com>  Sat, 26 Jan 2019 03:06:33 +0100
-
-wine (4.0~rc6-1) unstable; urgency=medium
-
-  * New upstream release 4.0-rc6, released Jan 11, 2019.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 12 Jan 2019 05:45:56 +0000
-
-wine (4.0~rc5-1) unstable; urgency=medium
-
-  * New upstream release 4.0-rc5, released Jan 4, 2019.
-  * Update standards version to 4.3.0.
-  * Regenerate all missing icon files.
-  * Drop libsane from the build dependencies.
-
- -- Michael Gilbert <mgilbert@debian.org>  Tue, 08 Jan 2019 01:52:57 +0000
-
-wine (4.0~rc4-2) unstable; urgency=medium
-
-  * Fix new build failure on arm64.
-  * Fix version number in NEWS.debian.
-  * Reformat a long manpage line to fit into 80 characters.
-  * Generate missing icons needed by regedit (closes: #917359).
-
- -- Michael Gilbert <mgilbert@debian.org>  Tue, 01 Jan 2019 03:21:38 +0000
-
-wine (4.0~rc4-1) unstable; urgency=medium
-
-  * New upstream release 4.0-rc4, released Dec 28, 2018.
-    - Fixes startup error when running TreePad X Enterprise (closes: #917005).
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 29 Dec 2018 21:55:32 +0000
-
-wine (4.0~rc3-1) unstable; urgency=medium
-
-  * New upstream release 4.0-rc3, released Dec 21, 2018.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sun, 23 Dec 2018 23:57:44 +0000
-
-wine (4.0~rc2-1) unstable; urgency=medium
-
-  [ Jens Reyer ]
-  * Don't check for new upstream development versions in src:wine.
-  * Import changes from src:wine on git branch buster to this version:
-    - Activate Wine as interpreter for Windows executables in wine-binfmt
-      (closes: #819255).
-    - Update README.debian:
-      Update links.
-      Adapt examples to new upstream versioning system.
-      Document that wine-gecko is currently not packaged (closes: #891461).
-      Editorial changes.
-    - Drop breaks/replaces to old Ubuntu wine1.6 packages.
-    - Let wine break/replace the old non-transitional package wine-stable.
-    - Install upstream ANNOUNCE as NEWS.gz.
-    - Strip unnecessary signature from upstream signing key.
-    - Separate g++ from clang recommendation to ensure arm64 gets the latter.
-  * Build-depend on libvkd3d-dev only on linux.
-  * Drop note about i386 paths for 32-bit results with wine64-tools.
+wine (2.0.2-1) unstable; urgency=medium
 
   [ Michael Gilbert ]
-  * New upstream release 4.0-rc2, released Dec 14, 2018.
-  * Restore note about winecfg and wineboot in README.debian.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 15 Dec 2018 21:27:59 +0000
-
-wine (4.0~rc1-1) unstable; urgency=medium
-
-  * New upstream release 4.0-rc1, released Dec 7, 2018.
-    - Updates to the timezone database.
-    - Vulkan support updated to the latest spec.
-    - Stream I/O support in WebServices.
-    - Better palette support in WindowsCodecs.
-    - Synchronization objects support for kernel drivers.
-    - Various bug fixes.
-  * Switch to the stable branch.
-    - Safer temporary directory handling (closes: #816034).
-
- -- Michael Gilbert <mgilbert@debian.org>  Tue, 11 Dec 2018 01:42:16 +0000
-
-wine-development (3.21-2) unstable; urgency=medium
-
-  * Fix build error on arm64.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 01 Dec 2018 19:38:57 +0000
-
-wine-development (3.21-1) unstable; urgency=medium
-
-  * New upstream release 3.21, released Nov 23, 2018.
-    - Fixes linking with winegcc when using multiarch (closes: #914031).
-    - Typelib marshaller rewrite using NDR functions.
-    - Support for memory font resources in DirectWrite.
-    - Joystick support improvements.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sun, 25 Nov 2018 01:41:42 +0000
-
-wine-development (3.20-2) unstable; urgency=medium
-
-  * Build using the default version of clang on arm64 (closes: #912795).
-  * Add clang as a dependency to the tools package on arm64 (closes: #912676).
-
- -- Michael Gilbert <mgilbert@debian.org>  Fri, 09 Nov 2018 22:28:34 +0000
-
-wine-development (3.20-1) unstable; urgency=medium
-
-  * New upstream release 3.20, released Nov 9, 2018.
-    - Async interfaces and ACF files in the IDL compiler.
-    - Support for substorage transforms in MSI.
-    - RPC/COM marshalling fixes.
-    - Support for Unicode requests in WinHTTP.
-    - Shell Autocomplete optimizations.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Fri, 09 Nov 2018 21:25:04 +0000
-
-wine-development (3.19-1) unstable; urgency=medium
-
-  * New upstream release 3.19, released Oct 26, 2018.
-    - Support for file I/O completion modes.
-    - WaitOnAddress synchronization primitives.
-    - Better support for 32-bit .NET binaries on 64-bit.
-    - Improved recovery on broken RPC connection.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 27 Oct 2018 23:56:51 +0000
-
-wine-development (3.18-2) unstable; urgency=medium
-
-  * Fix build error on arm64 (closes: #910944).
-
- -- Michael Gilbert <mgilbert@debian.org>  Sun, 14 Oct 2018 20:57:31 +0000
-
-wine-development (3.18-1) unstable; urgency=medium
-
-  * New upstream release 3.18, released Oct 12, 2018.
-    - Subpixel font rendering with FreeType >= 2.8.1.
-    - Support for OAEP algorithm in RSA encryption.
-    - Array marshalling fixes in DCOM.
-    - Improved DPI scaling in the Wine console.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sun, 14 Oct 2018 00:07:48 +0000
-
-wine-development (3.17-1) unstable; urgency=medium
-
-  * New upstream release 3.17, released Sep 28, 2018.
-    - Improved Shell Autocomplete support.
-    - More implementation of OPC Services.
-    - Improvements to the Pager common control.
-    - Various bug fixes.
-  * Drop Diablo II patch (closes: #908412).
-  * Use default build optimization level again.
-  * Use debhelper compat 9 to avoid always rerunning autoreconf.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 13 Oct 2018 00:10:44 +0000
-
-wine-development (3.16-1) unstable; urgency=medium
-
-  * New upstream release 3.16, released Sep 14, 2018.
-    - Initial implementation of OPC Services.
-    - Support for rendering buttons from an ImageList.
-    - Better support for CSS properties in MSHTML.
-    - Namespace fixes in XML Writer.
-    - Various bug fixes.
-  * Add q4wine to the suggested packages (closes: #908962).
-  * Build with -O1 optimization by default (closes: #908012).
-  * Reenable support for systems that do not have /run/user available for
-    temporary files (closes: #904041).
-
- -- Michael Gilbert <mgilbert@debian.org>  Sun, 16 Sep 2018 17:31:48 +0000
-
-wine-development (3.15-1) unstable; urgency=medium
-
-  * New upstream release 3.15, released Aug 31, 2018.
-    - HID device support in Raw Input.
-    - Many more new icons in Shell32.
-    - WinHTTP converted to use Windows Sockets.
-    - Syntax fixes in the command line interpreter.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Mon, 03 Sep 2018 01:31:01 +0000
-
-wine-development (3.14-2) unstable; urgency=medium
-
-  * Fix new build errors on arm64.
-  * Rebuild automatically generated icon files.
-  * Fix hang in Diablo II when connecting to battle.net.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 25 Aug 2018 22:02:20 +0000
-
-wine-development (3.14-1) unstable; urgency=medium
-
-  * New upstream release 3.14, released Aug 17, 2018.
-    - Support for DXTn texture decompression.
-    - Deferral support for MSI install actions.
-    - Support for Japanese keyboard in DirectInput.
-    - More improvements in the standard Task Dialog.
-    - A few more icons in Shell32.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Mon, 20 Aug 2018 02:20:12 +0000
-
-wine-development (3.13-3) unstable; urgency=medium
-
-  * Fix build errors on arm64 (closes: #903789).
-
- -- Michael Gilbert <mgilbert@debian.org>  Sun, 05 Aug 2018 23:15:10 +0000
-
-wine-development (3.13-2) unstable; urgency=medium
-
-  * Fix build errors on arm.
-
- -- Michael Gilbert <mgilbert@debian.org>  Thu, 02 Aug 2018 00:51:19 +0000
-
-wine-development (3.13-1) unstable; urgency=medium
-
-  * New upstream release 3.13, released Jul 20, 2018.
-    - Initial support for performance data in the registry.
-    - Mono engine updated with some bug fixes.
-    - Support for fetching BIOS information on Linux.
-    - Improvements in the standard Task Dialog.
-    - Various bug fixes.
-  * Fix compiler warnings introduced by gcc 8.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sun, 29 Jul 2018 05:19:42 +0000
-
-wine-development (3.12-3) unstable; urgency=medium
-
-  * Update README.debian.
-  * Fix various compiler warnings.
-
- -- Michael Gilbert <mgilbert@debian.org>  Thu, 12 Jul 2018 12:59:13 +0000
-
-wine-development (3.12-2) unstable; urgency=medium
-
-  * Update standards version to 4.1.5 (no changes required).
-  * Fix unused variable and function warnings caused by patches.
-  * Use /run/user as a safer temporary directory (closes: #903622).
-
- -- Michael Gilbert <mgilbert@debian.org>  Wed, 11 Jul 2018 07:50:41 +0000
-
-wine-development (3.12-1) unstable; urgency=medium
-
-  * New upstream release 3.12, released Jul 9, 2018.
-    - Unicode data updated to Unicode 11.0.0 (closes: #903383).
-    - Proxy configuration dialog in the Internet control panel.
-    - Syntax fixes in the Cmd.exe command interpreter.
-    - Some more glyphs in the Wingdings font.
-    - Various bug fixes.
-  * Enable support for Direct3D 12 using vkd3d.
-
- -- Michael Gilbert <mgilbert@debian.org>  Wed, 11 Jul 2018 05:46:55 +0000
-
-wine-development (3.11-1) unstable; urgency=medium
-
-  * New upstream release 3.11, released Jun 22, 2018.
-    - More debugger support for Wow64 processes.
-    - Support for sha256/sha384 hashes in ECDSA signatures.
-    - Better reporting of hyper-threaded CPUs.
-    - Improvements to the standard Task Dialog.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sun, 24 Jun 2018 18:04:42 +0000
-
-wine-development (3.10-1) unstable; urgency=medium
-
-  * New upstream release 3.10, released Jun 11, 2018.
-    - Swapchain support in Direct 3D 12.
-    - Vulkan support updated to the latest spec.
-    - Debugger support for Wow64 processes.
-    - Still more support for the Task Scheduler.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 23 Jun 2018 22:33:31 +0000
-
-wine-development (3.9-1) unstable; urgency=medium
-
-  * New upstream release 3.9, released May 25, 2018.
-    - OpenGL core contexts enabled by default in Direct 3D.
-    - Beginnings of Direct 3D 12 implementation using vkd3d.
-    - More support for the Task Scheduler.
-    - Some more Task Dialog support.
-    - Better arrow support in GdiPlus.
-    - Various bug fixes.
-  * Fix typo in a previous changelog entry.
-
- -- Michael Gilbert <mgilbert@debian.org>  Fri, 25 May 2018 19:45:29 +0000
-
-wine-development (3.8-2) unstable; urgency=medium
-
-  * Upstream now requires clang for arm64.
-  * Build vulkan support only on linux architectures.
-
- -- Michael Gilbert <mgilbert@debian.org>  Mon, 21 May 2018 01:06:48 +0000
-
-wine-development (3.8-1) unstable; urgency=medium
-
-  * New upstream release 3.8, released May 11, 2018.
-    - Infrastructure for writing kernel driver tests.
-    - Support for showing file properties in the Shell browser.
-    - MP3 decoder as a DirectX Media Object.
-    - More support for the Task Scheduler.
-    - Support for COM aggregation in UrlMon.
-    - Various bug fixes.
-  * Drop opengl compatibility patch (closes: #899095).
-  * Drop font patch, now fixed in freetype (closes: #899100).
-  * Build with support for sdl2 and vulkan (closes: #896928).
-  * Change maintainer address to debian-wine@lists.debian.org.
-    - Thanks to Jens Reyer.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 19 May 2018 09:10:53 +0000
-
-wine-development (3.7-1) unstable; urgency=medium
-
-  * New upstream release 3.7, released Apr 27, 2018.
-    - MSI custom actions run in a separate process.
-    - Support for job files in the Task Scheduler.
-    - Improved viewport support in Direct 3D.
-    - Larger resolution version of the standard icons.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 28 Apr 2018 02:31:21 +0000
-
-wine-development (3.6-1) unstable; urgency=medium
-
-  * New upstream release 3.6, released Apr 13, 2018.
-    - Support for PNG format icons.
-    - Support for 1D textures.
-    - More infrastructure for high DPI support.
-    - OLE data cache improvements.
-    - Various bug fixes.
-  * Move version control to salsa.debian.org.
-  * Change maintainer address to wine@tracker.debian.org.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sun, 22 Apr 2018 23:16:27 +0000
-
-wine-development (3.5-1) unstable; urgency=medium
-
-  * New upstream release 3.5, released Mar 30, 2018.
-    - More Vulkan support, including the vulkan-1 loader.
-    - Support for RSA and ECDSA cryptographic keys.
-    - Improved manifest file parser.
-    - Support for the Places toolbar in file dialogs.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Thu, 05 Apr 2018 01:16:42 +0000
-
-wine-development (3.4-1) unstable; urgency=medium
-
-  * New upstream release 3.4, released Mar 16, 2018.
-    - More Vulkan support, including integration with the X11 driver.
-    - Better handling of privileged instructions on x86-64.
-    - Hex edit dialog improvements in RegEdit.
-    - Assortment of patches merged from wine-staging.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sun, 01 Apr 2018 18:48:50 +0000
-
-wine-development (3.3-2) unstable; urgency=medium
-
-  * Correct arch all manpage build error.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sun, 01 Apr 2018 15:36:58 +0000
-
-wine-development (3.3-1) unstable; urgency=medium
-
-  * New upstream release 3.3, released Mar 2, 2018.
-    - Beginnings of Vulkan support.
-    - Direct3D multi-threaded command stream enabled by default.
-    - Multisample textures enabled by default.
-    - Support for game controllers through SDL.
-    - Support for loading CIL-only .Net binaries.
-    - Various bug fixes.
-  * Update patches to handle upstream makefile refactoring.
-  * Correctly specify that root is required to execute debian/rules binary.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sun, 01 Apr 2018 03:46:57 +0000
-
-wine-development (3.2-1) unstable; urgency=medium
-
-  * New upstream release 3.2, released Feb 16, 2018.
-    - Separate implementation of USER controls for ComCtl32 v6.
-    - Multisample texture support in Direct3D.
-    - Support for HID gamepads.
-    - More event support in MSHTML.
-    - Obsolete DOS code removed.
-    - Various bug fixes.
-  * Avoid modifications to po files that are under version control.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 17 Feb 2018 16:20:19 +0000
-
-wine-development (3.1-1) unstable; urgency=medium
-
-  * New upstream release 3.1, released Feb 2, 2018.
-    - Kerberos authentication support.
-    - Window class redirection for Common Controls 6.
-    - Support for X11 ARGB visuals.
-    - DOSBox required for running DOS executables.
-    - Various bug fixes.
-  * Switch to src:wine-development (closes: #889158).
-    - Adapt and rename appdata.xml for src:wine-development.
-    - Drop src:wine-specific breaks/replaces for old Ubuntu packages.
-    - Deactivate building wine-binfmt and fonts-wine packages.
-    - Let wine-development Provides: wine.
-    - Don't point to specific branch in Vcs fields.
-    - Also check for new upstream versions in the .x directories.
-  * Set Rules-Requires-Root: no.
-  * Make versioned dependency on debhelper backports safe.
-  * Refresh patches.
-  * Drop WGL_ARB_create_context_no_error feature in revert_opengl46.patch.
-
- -- Jens Reyer <jre.winesim@gmail.com>  Tue, 06 Feb 2018 22:54:59 +0100
-
-wine (3.0-1) unstable; urgency=medium
-
-  * New upstream release 3.0, released Jan 18, 2018.
-    The main highlights are:
-    - Direct3D 10 and 11 support.
-    - The Direct3D command stream.
-    - The Android graphics driver.
-    - Improved DirectWrite and Direct2D support.
-  * Drop armel.patch, applied upstream.
-  * Switch to src:wine.
-    - Point to branch buster in Vcs fields.
-    - Comment out Provides: wine (not needed in src:wine).
-    - Activate building wine-binfmt and fonts-wine packages.
-    - Readd src:wine-specific breaks/replaces for old Ubuntu packages.
-    - Adapt and rename appdata.xml for src:wine.
-    - Restrict watch file to look in upstream's stable release directory.
-  * Drop obsolete breaks/replaces.
-
- -- Jens Reyer <jre.winesim@gmail.com>  Sun, 21 Jan 2018 01:14:34 +0100
-
-wine-development (3.0~rc6-1) unstable; urgency=medium
-
-  * New upstream release 3.0-rc6, released Jan 12, 2018.
-    - Bug fixes only, we are in code freeze.
-  * Explicitly build-depend on libxfixes-dev.
-  * Build-depend on libpcap0.8-dev instead of transitional package libpcap-dev.
-  * Refresh patches.
-
- -- Jens Reyer <jre.winesim@gmail.com>  Fri, 19 Jan 2018 15:55:58 +0100
-
-wine-development (3.0~rc5-1) unstable; urgency=medium
-
-  * New upstream release 3.0-rc5, released Jan 5, 2018.
-    - Bug fixes only, we are in code freeze.
-  * Update copyright years.
-  * Add patch by upstream to fix armel build failure (closes: #887558).
-
- -- Jens Reyer <jre.winesim@gmail.com>  Thu, 18 Jan 2018 17:38:02 +0100
-
-wine-development (3.0~rc4-1) unstable; urgency=medium
-
-  * New upstream release 3.0-rc4, released Dec 29, 2017.
-    - Bug fixes only, we are in code freeze.
-  * Don't disable pie and fortify hardening buildflags in d/rules.
-    They are still not enabled in the whole build though.
-
- -- Jens Reyer <jre.winesim@gmail.com>  Thu, 18 Jan 2018 03:05:31 +0100
-
-wine-development (3.0~rc3-1) unstable; urgency=medium
-
-  * New upstream release 3.0-rc3, released Dec 22, 2017.
-    - Bug fixes only, we are in code freeze.
-    - Fixes building on armel again.
-    - Fixes executing position-independent (PIE) host executables
-      (closes: #865407).
-  * Restrict v4l support to linux and kfreebsd architectures.
-  * Restrict capi support to linux architectures.
-  * Refresh patches.
-
- -- Jens Reyer <jre.winesim@gmail.com>  Tue, 16 Jan 2018 14:28:55 +0100
-
-wine-development (3.0~rc2-1) unstable; urgency=medium
-
-  * New upstream release 3.0-rc2, released Dec 15, 2017.
-    - Bug fixes only, we are in code freeze.
-  * Improve commit message at the end of d/s/import.
-  * Change watch URL to consider all Wine releases.
-  * Remove trailing whitespace in d/changelog.
-  * Drop debian/files from d/clean.
-  * Build with capi, gphoto, sane, and v4l support.
-  * Bump debhelper compat level to 11.
-  * Bump Standards-Version to 4.1.3 (no changes needed).
-  * Refresh patches.
-
- -- Jens Reyer <jre.winesim@gmail.com>  Mon, 15 Jan 2018 19:55:48 +0100
-
-wine-development (3.0~rc1-1) unstable; urgency=medium
+  * New upstream release 2.0.2, released Jul 20, 2017.
+  * Update the import script to fetch upstream's stable version.
 
   [ Jens Reyer ]
-  * Build wine64VERSION-preloader also on arm64.
-  * Add build-dependendeny on libkrb5-dev for Kerberos support.
+  * Update to using Unicode 10 (closes: #868175).
+
+ -- Michael Gilbert <mgilbert@debian.org>  Sun, 23 Jul 2017 00:17:53 +0000
+
+wine (2.0.1-1) experimental; urgency=medium
 
   [ Michael Gilbert ]
-  * New upstream release 3.0-rc1, released Dec 8, 2017.
-    - Reenables support for armel (closes: #881446).
-    - Direct3D 11 enabled by default on AMD and Intel GPUs.
-    - AES encryption support on macOS.
-    - Implementation of the task scheduler.
-    - Registry export support in the reg.exe tool.
-    - Progman DDE support.
-    - OLE data cache improvements.
-    - More event support in MSHTML.
-    - Relay debugging improvements.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 09 Dec 2017 20:31:43 +0000
-
-wine-development (2.22-1) unstable; urgency=medium
-
-  * New upstream release 2.22, released Nov 24, 2017.
-    - Source selection dialog for scanners.
-    - Improvements in ARM64 support.
-    - Float audio formats with more than 2 channels in XAudio.
-    - Fixes for DLL injection support.
-    - Input methods improvements.
-    - Various bug fixes.
-  * Drop dbgsym migration line.
-  * Remove prebuilt microsoft help file from the upstream tarball.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sun, 26 Nov 2017 19:18:02 +0000
-
-wine-development (2.21-1) unstable; urgency=medium
-
-  * New upstream release 2.21, released Nov 11, 2017.
-    - Still more metafile support in GdiPlus.
-    - Indirect draws support in Direct 3D.
-    - Calling convention fixes on ARM.
-    - Improved serial port detection on Linux.
-    - Services fixes on WoW64.
-    - Better DPI scaling in the Shell Explorer.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 11 Nov 2017 18:00:06 +0000
-
-wine-development (2.20-1) unstable; urgency=medium
-
-  * New upstream release 2.20, released Oct 31, 2017.
-    - Improved event support in MSHTML.
-    - Preloader support on ARM64.
-    - Interpolation modes in Direct3D.
-    - Improved metafile support in GdiPlus.
-    - Initial version of Kerberos5 Authentication Package.
-    - OLE clipboard cache improvements.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sun, 05 Nov 2017 00:15:37 +0000
-
-wine-development (2.19-1) unstable; urgency=medium
-
-  * New upstream release 2.19, released Oct 13, 2017.
-    - Support for 32-bit float audio on Android.
-    - Named pipes now fully handled by the Wine server.
-    - Support for a new Microsoft root certificate.
-    - More transform fixes in GdiPlus.
-    - Some heap allocation optimizations.
-    - Various bug fixes.
-  * Use dpkg libraries to get DEB_* variables.
-  * Use secure URI in watch file.
-  * Set upstream's WINE_WGL_DRIVER_VERSION in opengl.patch.
-  * Cleanup and automatically commit changes by d/s/import.
-  * Refresh patches.
-
- -- Jens Reyer <jre.winesim@gmail.com>  Tue, 31 Oct 2017 21:57:48 +0100
-
-wine-development (2.18-1) unstable; urgency=medium
-
-  * New upstream release 2.18, released Sep 29, 2017.
-    - Radial gradients in Direct2D.
-    - Asynchronous message support in WebServices.
-    - Virtual memory write watches improvements.
-    - FreeType 2.8.1 compatibility fixes.
-    - Various bug fixes.
-  * Refresh patches.
-  * Update some links to https.
-  * Update standards-version to 4.1.1.
-  * Use unversioned solinks in sonames2elf (closes: #827770).
-  * Add patch to drop new ARB_texture_filter_anisotropic extension.
-
- -- Jens Reyer <jre.winesim@gmail.com>  Fri, 13 Oct 2017 19:07:33 +0200
-
-wine-development (2.17-1) unstable; urgency=medium
-
-  * New upstream release 2.17, released Sep 15, 2017.
-    - Better support for grayscale mode in DirectWrite.
-    - Per-application StartupWMClass in desktop files.
-    - Virtual memory compatibility improvements.
-    - Reply messages improvements in WebServices.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Fri, 15 Sep 2017 22:55:23 +0000
-
-wine-development (2.16-1) unstable; urgency=medium
-
-  * New upstream release 2.16, released Sep 1, 2017.
-    - Support for pasting metafiles in RichEdit.
-    - Better support for grayscale PNG images.
-    - Support for safety features in library loading.
-    - Better handling of transforms in GdiPlus.
-    - Rendering improvements in DirectWrite.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Wed, 06 Sep 2017 13:29:51 +0000
-
-wine-development (2.15-1) unstable; urgency=medium
-
-  * New upstream release 2.15, released Aug 20, 2017.
-    - Support for AES encryption.
-    - Improved Bezier support in Direct2D.
-    - Chunked transfer improvements in WinInet.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 02 Sep 2017 22:58:09 +0000
-
-wine-development (2.14-1) unstable; urgency=medium
-
-  * New upstream release 2.14, released Aug 3, 2017.
-    - C++ calling convention workarounds in the IDL compiler.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 05 Aug 2017 05:27:07 +0000
-
-wine-development (2.13-1) unstable; urgency=medium
-
-  * New upstream release 2.13, released Jul 21, 2017.
-    - Unicode data updated to Unicode 10.0.0.
-    - Nicer looking default mouse cursors.
-    - Persistent connections support in WinHTTP.
-    - Message Framing protocol support in WebServices.
-    - Improved metafile support in GdiPlus.
-    - Debug registers support in x86-64 exception handling.
-    - Anti-aliasing improvements in DirectWrite.
-    - Various bug fixes.
-  * Drop VerticalOrientation handling from unicode.patch, applied upstream.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 22 Jul 2017 15:17:52 +0000
-
-wine-development (2.12-1) unstable; urgency=medium
-
-  * New upstream release 2.12, released Jul 7, 2017.
-    - Some performance improvements with async I/O.
-    - More RegEdit file parser improvements.
-    - Beginnings for MSI user interface support.
-    - Various bug fixes.
-  * Update copyright years.
-  * Update standards version.
-  * Guard against unicode 11 breaking the package.
-
- -- Michael Gilbert <mgilbert@debian.org>  Mon, 10 Jul 2017 04:09:40 +0000
-
-wine-development (2.11-2) unstable; urgency=medium
-
-  * Update to using Unicode 10 (closes: #867106).
-
- -- Jens Reyer <jre.winesim@gmail.com>  Sat, 08 Jul 2017 13:37:04 +0200
-
-wine-development (2.11-1) unstable; urgency=medium
-
-  * New upstream release 2.11, released Jun 23, 2017.
-    - Support for security labels.
-    - Relay debugging on ARM64.
-    - More dictionary support in WebServices.
-    - New registry file parser in RegEdit.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 24 Jun 2017 13:24:46 +0000
-
-wine-development (2.10-1) unstable; urgency=medium
-
-  * New upstream release 2.10, released Jun 9, 2017.
-    - Dictionary support in WebServices.
-    - A number of Direct2D fixes.
-    - User interface improvements in RegEdit.
-    - OLE clipboard cache fixes.
-    - Various bug fixes.
-  * Upload to unstable now that stretch has been released.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 17 Jun 2017 20:13:51 +0000
-
-wine-development (2.9-1) experimental; urgency=medium
-
-  * New upstream release 2.9, released May 26, 2017.
-    - Support for tesselation shaders in Direct3D.
-    - Binary mode support in WebServices.
-    - Clipboard changes detected through Xfixes.
-    - User interface improvements in RegEdit.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 27 May 2017 03:39:17 +0000
-
-wine-development (2.8-1) experimental; urgency=medium
-
-  * New upstream release 2.8, released May 12, 2017.
-    - Direct3D command stream runs asynchronously.
-    - Better serial and parallel ports autodetection.
-    - Still more fixes for high DPI settings.
-    - System tray notifications on macOS.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 13 May 2017 15:52:08 +0000
-
-wine-development (2.7-1) experimental; urgency=medium
-
-  * New upstream release 2.7, released Apr 28, 2017.
-    - TCP and UDP connection support in WebServices.
-    - Various shader improvements for Direct3D 11.
-    - Improved support for high DPI settings.
-    - Partial reimplementation of the GLU library.
-    - Support for recent versions of OSMesa.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 06 May 2017 23:14:30 +0000
-
-wine-development (2.6-1) experimental; urgency=medium
-
-  * New upstream release 2.6, released Apr 13, 2017.
-    - Multi-threaded command stream in Direct3D.
-    - More Shader Model 5 instructions.
-    - More support for 3D textures.
-    - Better font transformations in DirectWrite.
-    - Various bug fixes.
-  * Avoid unnecessary linking to gstbase.
-  * Drop glu32.patch since upstream no longer links to it unnecessarily.
-
- -- Michael Gilbert <mgilbert@debian.org>  Fri, 14 Apr 2017 18:21:47 +0000
-
-wine-development (2.5-1) experimental; urgency=medium
-
-  * New upstream release 2.5, released Mar 31, 2017.
-    - Support for message-mode named pipes.
-    - Translation of version resources through po files.
-    - Transform feedback support in Direct3D.
-    - Scheduler classes in C++ runtime.
-    - Better scrolling in popup menus.
-    - More improvements to the XML reader.
-    - Various bug fixes.
-  * Refresh patches.
-  * Document purpose of the sonames2elf script.
-  * Support stable release 2.0 in import script.
-  * Fix typo to clarify license LGPL-2.1 *or later* in import scripts.
-
- -- Jens Reyer <jre.winesim@gmail.com>  Fri, 07 Apr 2017 12:45:15 +0200
-
-wine-development (2.4-1) experimental; urgency=medium
-
-  * New upstream release 2.4, released Mar 17, 2017.
-    - Built-in implementation of cryptographic hashes.
-    - More Direct3D command stream work.
-    - Simulated bold and italic in DirectWrite.
-    - Improvements to the XML reader.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sun, 19 Mar 2017 18:42:56 +0000
-
-wine-development (2.3-1) experimental; urgency=medium
-
-  * New upstream release 2.3, released Mar 3, 2017.
-    - Obsolete wineinstall script removed.
-    - More Direct3D command stream work.
-    - A few more Shader Model 5 instructions.
-    - Better underline rendering in DirectWrite.
-    - Improved ODBC support on 64-bit.
-    - Various bug fixes.
-
- -- Michael Gilbert <mgilbert@debian.org>  Sat, 11 Mar 2017 05:24:44 +0000
-
-wine-development (2.2-1) experimental; urgency=medium
-
-  * New upstream release 2.2, released Feb 17, 2017.
-    - Windows version set to Windows 7 for new prefixes.
-    - More steps towards the Direct3D command stream.
-    - Still more Shader Model 5 instructions.
-    - Initial support for double-buffered theme painting.
-    - Various bug fixes.
+  * Update to debhelper 10.
   * Use date of the latest changelog update as the build date.
 
- -- Michael Gilbert <mgilbert@debian.org>  Sun, 19 Feb 2017 04:28:45 +0000
+  [ Jens Reyer ]
+  * New upstream release 2.0.1, released Apr 20, 2017.
+    - Various bug fixes
+    - Deprecated tools/wineinstall
+  * Describe purpose of the sonames2elf script.
+  * Clarify license LGPL-2.1 *or later* in import scripts.
 
-wine-development (2.1-1) experimental; urgency=medium
+ -- Jens Reyer <jre.winesim@gmail.com>  Wed, 03 May 2017 17:22:11 +0200
 
-  * New upstream release 2.1, released Feb 3, 2017.
-    - Many fixes that were deferred during code freeze.
-    - More Shader Model 5 instructions.
-    - A number of improvements to MIME message handling.
-    - Line breaking improvements in DirectWrite.
-    - HID bus service now running by default.
-    - Direct2D rendering improvements.
-    - Various bug fixes.
-    - New versioning convention.
-    - Source release tarballs now use xz compression.
-  * Update watch file to find the new upstream tarballs.
-  * Update to debhelper 10.
+wine (2.0-4) experimental; urgency=medium
 
- -- Michael Gilbert <mgilbert@debian.org>  Sun, 05 Feb 2017 17:39:44 +0000
+  * Switch to the stable branch.
+
+ -- Jens Reyer <jre.winesim@gmail.com>  Tue, 04 Apr 2017 18:24:36 +0200
 
 wine-development (2.0-3) unstable; urgency=medium
 
@@ -1695,7 +905,7 @@ wine-development (1.7.44-1) unstable; urgency=medium
   * Add version constraints to the libwine dependency (closes: #786797).
   * Remove all of the calls to exit in the shared library.
   * Set wine as Multi-Arch foreign (closes: #787180).
-  * Add symlink to wine32 (closes: #786866).
+  * Add sylink to wine32 (closes: #786866).
 
  -- Michael Gilbert <mgilbert@debian.org>  Sat, 30 May 2015 17:09:25 +0000
 
@@ -2299,7 +1509,7 @@ wine-unstable (1.7.5-1) unstable; urgency=medium
     - Improved support for simulated bold fonts.
     - Unicode data updated to Unicode 6.3.
     - Better support for typelib registration on 64-bit.
-    - Various bug fixes.
+    - Various bug fixes. 
 
  -- Michael Gilbert <mgilbert@debian.org>  Sun, 16 Feb 2014 01:05:18 +0000
 
@@ -6802,7 +6012,7 @@ wine (0.0.991031-1) unstable; urgency=low
   * New upstream version.
   * Changed a to point to /floppy instead of /mnt/fd0.
   * Now links to mesa.  Closes: #47312
-  * symtable is now set correctly in wine.conf. Closes: #43601
+  * symtable is now set correctly in wine.conf. Closes: #43601  
   * Assorted upstream Bug fixs as always :).
 
  -- Andrew D. Lenharth <andrewl@debian.org>  Wed,  3 Nov 1999 18:01:17 -0800
@@ -6818,7 +6028,7 @@ wine (0.0.990923-1) unstable; urgency=low
 
   *New Upstream release.
   *Lots of bug fixes (of course).
-  *Reworked msacm driver.
+  *Reworked msacm driver.  
 
  -- Andrew D. Lenharth <andrewl@debian.org>  Tue, 05 Oct 1999 14:21:46 -0700
 
@@ -6829,8 +6039,8 @@ wine (0.0.990815-1) unstable; urgency=low
   * Many more dlls are seperate from the main library.
   * includes documentation/ directory included. Closes: #29103
   * fixed depend problem. Closes: #43320 #43325 #43332
-  * wine.conf is now back in /etc. Closes: #43387
-
+  * wine.conf is now back in /etc. Closes: #43387 
+  
  -- Andrew D. Lenharth <andrewl@debian.org>  Tue, 24 Aug 1999 14:21:46 -0700
 
 wine (0.0.990731-1) unstable; urgency=low
@@ -7277,16 +6487,16 @@ wine (0.0.980104-1) unstable; urgency=low
     - Preliminary threading support based on clone().
     - Lots of bug fixes.
 
- -- Vincent Renardias <vincent@waw.com>  Thu,  8 Jan 1998 01:43:26 +0100
+ -- Vincent Renardias <vincent@waw.com>  Thu,  8 Jan 1998 01:43:26 +0100 
 
 wine (0.0.971221-2) unstable; urgency=low
 
   * Included the following patches from www.winehq.com/patches/ :
-    - ComboBox Fix (Bertho Stultiens).
-    - Console Fix (Karl Garrison).
-    - SetMetaFileBitsEx function updated.
-    - fd_set Winsock fixes (Ove Kaaven).
-  * Now compiled with egcs (gcc dies with sig 11 on misc/shellord.c).
+    - ComboBox Fix (Bertho Stultiens). 
+    - Console Fix (Karl Garrison). 
+    - SetMetaFileBitsEx function updated. 
+    - fd_set Winsock fixes (Ove Kaaven). 
+  * Now compiled with egcs (gcc dies with sig 11 on misc/shellord.c). 
 
  -- Vincent Renardias <vincent@waw.com>  Thu,  1 Jan 1998 16:06:13 +0100
 
