In puavo-laptop-setup, allow choosing school/organisation version (basically unset the local puavo-conf puavo.abitti.version value) to get the Abitti version as it is defined in Puavo.
Unfortunately we do not yet show what the latest version is
(according to this tool), or what the organisation/school version
is.  This should be useful so that user knows what he/she is going
to get.

--- a/parts/laptop-setup/po/fi/puavo-laptop-setup.po
+++ b/parts/laptop-setup/po/fi/puavo-laptop-setup.po
@@ -51,5 +51,8 @@ msgstr "Koejärjestelmäversio (Abitti-yhteensopiva)"
 msgid "latest version"
 msgstr "viimeisin versio"
 
+msgid "school version"
+msgstr "koulun versio"
+
 msgid "this version:"
 msgstr "tämä versio:"
