In puavo-laptop-setup and Abitti-versions, show the latest version (if available) and the school version as well. If the school version is not set, do not show the option at all.

--- a/parts/laptop-setup/po/fi/puavo-laptop-setup.po
+++ b/parts/laptop-setup/po/fi/puavo-laptop-setup.po
@@ -51,6 +51,9 @@ msgstr "Koejärjestelmäversio (Abitti-yhteensopiva)"
 msgid "latest version"
 msgstr "viimeisin versio"
 
+msgid "latest"
+msgstr "viimeisin"
+
 msgid "school version"
 msgstr "koulun versio"
 
