Add possibility to run puavo-reset-laptop-to-factory-defaults from puavo-laptop-setup, authenticating with primary user password. Closes #561.

--- a/parts/laptop-setup/po/fi/puavo-laptop-setup.po
+++ b/parts/laptop-setup/po/fi/puavo-laptop-setup.po
@@ -59,3 +59,25 @@ msgstr "koulun versio"
 
 msgid "this version:"
 msgstr "tämä versio:"
+
+msgid ""
+"DESTROY ALL USER DATA AND RESET LAPTOP TO FACTORY STATE"
+" (requires password)"
+msgstr ""
+"TUHOA KAIKKI TIEDOT JA PALAUTA TIETOKONE TEHDASTILAAN"
+" (vaatii salasanan)"
+
+msgid "DANGER! DANGER!"
+msgstr "VAARA! VAARA!"
+
+msgid ""
+"THIS PROCEDURE WILL RESET THIS COMPUTER TO FACTORY STATE!"
+"  IT WILL DESTROY ALL YOUR DATA IN YOUR HOME DIRECTORY,"
+" AND MORE!  WHEN IN DOUBT, TURN OFF THE MACHINE, PANIC"
+" AND RUN AWAY!  (press OK and provide your password)"
+" if you still want to do this.)"
+msgstr ""
+"TÄMÄ TOIMENPIDE PALAUTTAA TÄMÄN TIETOKONEEN TEHDASASETUKSILLE!"
+" SE TUHOAA KAIKEN DATAN KOTIHAKEMISTOSSASI, JA ENEMMÄNKIN!"
+" JOS EPÄILET OLLENKAAN, SAMMUTA KONE, PANIKOI JA JUOKSE KARKUUN!"
+" (paina OK ja anna salasanasi jos haluat kuitenkin tehdä tämän.)"
